--- a/index.html
+++ b/index.html
@@ -48,13 +48,21 @@
     </header>
     <main>
         <div class="col-12">
-            <img class="img-fluid hawai" src="images/hawaii.jpg">
-            <div class="opacity"></div>
-            <div class="container">
-                <div class="texto_imagen text-end">
-                    <h1>One more for good measure.</h1>
-                    <p>Some representative placeholder content for the third slide of this carousel.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            <div class="caja-banner">
+                <div class="mask">
+                    <div class="d-flex align-items-center justify-content-end h-100 container">
+                        <div class="text-white caja-banner-texto">
+                            <h1 class="mb-3">Conf Bs As</h1>
+                            <h5 class="mb-4">Bs As llega por primera vez a la argentina. Un evento para compartir
+                                con nuestra comunidad el conocimiento y experiencia de los expertos que est&aacute;n
+                                creando el futuro de internet.
+                                Ven a conocer a los miembros del evento, a otros estudiantes de Codo a Codo y los
+                                oradores de primer nivel que tenemos para ti. Te esperamos!</h5>
+                            <a class="btn btn-outline-light btn-lg m-2" href="#" role="button">Quiero ser orador</a>
+                            <a class="btn btn-success btn-lg m-2" href="#"
+                                role="button">Comprar tickets</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
