--- a/index.html
+++ b/index.html
@@ -59,14 +59,165 @@
                                 Ven a conocer a los miembros del evento, a otros estudiantes de Codo a Codo y los
                                 oradores de primer nivel que tenemos para ti. Te esperamos!</h5>
                             <a class="btn btn-outline-light btn-lg m-2" href="#" role="button">Quiero ser orador</a>
-                            <a class="btn btn-success btn-lg m-2" href="#"
-                                role="button">Comprar tickets</a>
+                            <a class="btn btn-success btn-lg m-2" href="#" role="button">Comprar tickets</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <section>
+            <div class="container">
+                <div class="px-4 py-1 my-1 text-center">
+                    <div class="col-lg-6 mx-auto">
+                        <p class="lead mb-1">CONOCE A LOS</p>
+                        <h1 class="display-5 fw-bold">ORADORES</h1>
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4 pb-5">
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/steve.jpg" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title"><span class="badge bg-warning text-dark">Javascript</span>
+                                    <span class="badge bg-info">React</span>
+                                </h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/bill.jpg" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title"><span class="badge bg-warning text-dark">Javascript</span>
+                                    <span class="badge bg-info">React</span>
+                                </h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100">
+                            <img src="images/ada.jpeg" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title"><span class="badge bg-secondary">Negocios</span>
+                                    <span class="badge bg-danger">Startups</span>
+                                </h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section>
+            <div class="d-flex justify-content-center bg-dark mb-3">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img class="img-responsive honolulu" class="ms-5" src="images/honolulu.jpg" />
+                    </div>
+                    <div class="col-md-6 px-4 text-white">
+                        <h2 class="mt-4">Bs As - Octubre</h2>
+                        <p>
+                            Buenos Aires es la provincia y localidad más grande del estado de
+                            Argentina. En los Estados Unidos, Honolulu es la más sureña de
+                            entre las principales ciudades estadounidenses. Aunque el nombre
+                            de Honolulu se refiere al área urbana en la costa sureste de la
+                            isla de Oahu, la ciudad y el condado de Honolulu han formado una
+                            ciudad condado consolidada que cubre toda la isla (aproximadamente
+                            600 km² de superficie).
+                        </p>
+                        <a class="btn btn-outline-light btn-lg m-2" href="#" role="button">Conoc&eacute; m&aacute;s</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="px-4 py-1 my-1 text-center">
+                    <div class="col-lg-6 mx-auto">
+                        <p class="lead mb-1">CONVI&Eacute;RTETE EN UN</p>
+                        <h1 class="display-5 fw-bold">ORADOR</h1>
+                    </div>
+                </div>
+                <div class="row  pb-5">
+                    <div class="col-lg-7 mx-auto">
+                        <form id="contact-form" role="form">
+                            <p class="text-center">Anotate como orador para dar una charla ignite. Cuentanos de que
+                                quieres hablar!</p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input id="form_name" type="text" name="name" class="form-control"
+                                            placeholder="Nombre" required="required">
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input id="form_lastname" type="text" name="surname" class="form-control"
+                                            placeholder="Apellido" required="required">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <textarea id="form_message" name="message" class="form-control"
+                                            placeholder="Sobre qu&eacute; quieres hablar?" rows="4"
+                                            required="required"></textarea>
+                                        <small class="form-text text-muted">Recuerda incluir un t&iacute;tulo para tu
+                                            charla</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-md-12">
+                                    <input type="submit" class="btn btn-custom btn-lg btn-block" value="Enviar"
+                                        style="width: 100%;">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="text-muted py-5">
+        <div class="container text-white">
+            <div class="row seven-cols">
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Preguntas <br>
+                    frecuentes
+                </div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Contactanos</div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Prensa</div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Conferencias</div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+
+                    Terminos y <br>
+                    condiciones
+                </div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Privacidad</div>
+                <div class="col-lg-1 col-md-3 col-sm-4 col-xs-6">
+                    Estudiantes</div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
