--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                         style="width: 100%;">
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="submit" class="btn btn-custom btn-lg btn-block" value="Resumen"
+                                    <input type="button" onclick="getResumen()" class="btn btn-custom btn-lg btn-block" value="Resumen"
                                         style="width: 100%;">
                                 </div>
                             </div>
@@ -347,6 +347,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
