--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="row mt-3">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input id="form_email" type="email" name="name" class="form-control"
+                                        <input id="form_email" type="email" name="form_email" class="form-control"
                                             placeholder="Correo" required="required">
                                     </div>
                                 </div>
@@ -280,17 +280,17 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label class="form-label">Cantidad</label>
-                                        <input id="form_name" type="text" name="name" class="form-control"
+                                        <input id="cantidad" type="text" name="cantidad" class="form-control"
                                             placeholder="Cantidad" required="required">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label class="form-label">Categor&iacute;a</label>
-                                        <select class="form-control">
-                                            <option>Estudiante</option>
-                                            <option>Trainee</option>
-                                            <option>Junior</option>
+                                        <select id="categoria_id" class="form-control">
+                                            <option value="80">Estudiante</option>
+                                            <option value="50">Trainee</option>
+                                            <option value="15">Junior</option>
                                         </select>
                                     </div>
                                 </div>
